[package]
name = "olp-protocol"
version = "0.1.0"
authors = ["Subhadip Mitra"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
curve25519-dalek = "3.0"
bulletproofs = { version = "2.0", features = ["yoloproofs"] }
merlin = "2.0"
rand_core = "0.6"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
criterion = "0.3"
